--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,25 +10,25 @@ spring.shardingsphere.datasource.master0.type=com.alibaba.druid.pool.DruidDataSo
 spring.shardingsphere.datasource.master0.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.master0.url=jdbc:mysql://localhost:3306/ds_0?characterEncoding=utf-8
 spring.shardingsphere.datasource.master0.username=root
-spring.shardingsphere.datasource.master0.password=0490218292
+spring.shardingsphere.datasource.master0.password=mouming990974@0#2
 
 spring.shardingsphere.datasource.master0slave.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.master0slave.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.master0slave.url=jdbc:mysql://localhost:3306/ds_0_slave?characterEncoding=utf-8
 spring.shardingsphere.datasource.master0slave.username=root
-spring.shardingsphere.datasource.master0slave.password=0490218292
+spring.shardingsphere.datasource.master0slave.password=mouming990974@0#2
 
 spring.shardingsphere.datasource.master1.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.master1.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.master1.url=jdbc:mysql://localhost:3306/ds_1?characterEncoding=utf-8
 spring.shardingsphere.datasource.master1.username=root
-spring.shardingsphere.datasource.master1.password=0490218292
+spring.shardingsphere.datasource.master1.password=mouming990974@0#2
 
 spring.shardingsphere.datasource.master1slave.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.master1slave.driver-class-name=com.mysql.jdbc.Driver
 spring.shardingsphere.datasource.master1slave.url=jdbc:mysql://localhost:3306/ds_1_slave?characterEncoding=utf-8
 spring.shardingsphere.datasource.master1slave.username=root
-spring.shardingsphere.datasource.master1slave.password=0490218292
+spring.shardingsphere.datasource.master1slave.password=mouming990974@0#2
 
 
 # 分表配置
