--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>
 			<version>4.0.0-RC1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 		
 		<!-- <dependency>
 			<groupId>io.shardingjdbc</groupId>
